--- a/FrontEnd/client/src/styles/_varible.scss
+++ b/FrontEnd/client/src/styles/_varible.scss
@@ -4,6 +4,7 @@
 $primary-color: #ffffff;
 $secondary-color: #ee0033;
 $secondary-color-hover: #be0129;
+$color-3th: #2372e8;
 $primary-color-text: #020202;
 $primary-color-text-2: #b4b4b4a4;
 $secondary-color-label: #ffffff;
