--- a/FrontEnd/client/src/index.css
+++ b/FrontEnd/client/src/index.css
@@ -110,6 +110,7 @@ button:focus-visible {
   align-items: stretch;
   overflow-x: hidden;
   background-color: #ffffff;
+  min-height: 100vh;
 }
 
 .modal-dropdown-enter {
@@ -185,5 +186,13 @@ button:focus-visible {
 input, textarea {
   background-color: #ffffff;
   color: black;
+}
+
+div#preview-multiple {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 9999999999;
 }
 
