--- a/FrontEnd/client/src/styles/previewmultipleimage.scss
+++ b/FrontEnd/client/src/styles/previewmultipleimage.scss
@@ -61,9 +61,13 @@
 .preview-multiple-images__slide {
     height: 100%;
     width: 50%;
+    &.swiper  {
+        padding-bottom: 0 !important;
+    }
     .swiper-slide {
         background-color: transparent !important;
         border-radius: none !important;
+        border-radius: 0px;
     }
 }
 
@@ -73,5 +77,5 @@
     height: 100%;
     background-position: center !important;
     background-repeat: no-repeat !important;
-    background-size: contain !important;
+    background-size: cover !important;
 }
