--- a/FrontEnd/client/src/components/map/map-modal/map-model.scss
+++ b/FrontEnd/client/src/components/map/map-modal/map-model.scss
@@ -21,8 +21,8 @@
 }
 
 .map-modal__container {
-    height: calc(100vh - 200px);
-    width: 1280px;
+    height: calc(100vh - 100px);
+    width: calc(100vw - 200px);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -78,6 +78,79 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: stretch;
-    width: 300px;
+    width: 400px;
 }
 
+.mapbox-marker {
+    z-index: 1;
+}
+
+.map-popup {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    position: relative;
+}
+
+.map-popup__main-close {
+    position: absolute;
+    top: -10px;
+    right: -5px;
+    cursor: pointer;
+    &:hover {
+        svg {
+            color: $secondary-color;
+        }
+    }
+}
+
+.map-popup__image {
+    height:  100px;
+    width: 100px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    border-radius: 10px;
+}
+
+.map-popup__main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    justify-content: flex-start;
+    align-items: flex-start;
+    height: 100%;
+    align-self: flex-start;
+}
+
+.map-popup__name {
+    font-size: 13px;
+    font-weight: bold;
+    word-wrap: break-word;
+}
+
+.map-popup__address {
+    font-size: 12px;
+    word-wrap: break-word;
+}
+
+.map-popup__review {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 2px;
+}
+
+.map-popup__review-count {
+    font-size: 12px;
+    word-wrap: break-word;
+    opacity: 0.9;
+}
+
+.mapboxgl-popup {
+    max-width: 450px !important;
+    .mapboxgl-popup-content {
+        padding: 10px !important;
+    }
+}
