--- a/FrontEnd/client/src/components/map/map.scss
+++ b/FrontEnd/client/src/components/map/map.scss
@@ -60,6 +60,7 @@
     background: $primary-color;
     border: 2px solid $secondary-color;
     cursor: pointer;
+    user-select: none;
     &:hover {
         opacity: 0.8;
     }
@@ -67,6 +68,7 @@
 
 .marker-point {
     position: relative;
+    cursor: pointer;
     &::before {
         content: "";
         position: absolute;
@@ -87,6 +89,9 @@
     }
     &:has(.mark-point__current-location)::before {
         display: none;
+    }
+    &:hover {
+        transform: scale(1.1);
     }
 }
 
