--- a/FrontEnd/client/src/components/map/map-modal/map-model.scss
+++ b/FrontEnd/client/src/components/map/map-modal/map-model.scss
@@ -69,7 +69,6 @@
     display: flex;
     justify-content: space-between;
     align-items: stretch;
-    gap: 20px;
     width: 100%;
 }
 
@@ -153,4 +152,23 @@
     .mapboxgl-popup-content {
         padding: 10px !important;
     }
+}
+
+.map-model__list-place-number-result {
+    font-size: 15px;
+    font-weight: bold;
+    padding: 10px 5px;
+    display: flex;
+    width: 100%;
+}
+
+.map-model__list-place-result {
+    width: 100%;
+    height: calc(100vh - 188px);
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 10px;
 }
