--- a/FrontEnd/client/src/components/map/map.scss
+++ b/FrontEnd/client/src/components/map/map.scss
@@ -10,6 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.437);
 }
 
 
