--- a/FrontEnd/client/src/components/near-you/filter/filter-map.scss
+++ b/FrontEnd/client/src/components/near-you/filter/filter-map.scss
@@ -49,6 +49,7 @@
     justify-content: flex-start;
     align-items: center;
     gap: 5px;
+    width: 100%;
 }
 
 .filter-map__item-control-label {
