--- a/FrontEnd/client/src/components/common/range-slider/range-slider.scss
+++ b/FrontEnd/client/src/components/common/range-slider/range-slider.scss
@@ -1,71 +1,125 @@
-@import '../../../styles/varible';
+@import "../../../styles/varible";
 
-.range-slider {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    position: relative;
-    justify-content: center;
-    cursor: pointer;
-    padding: 30px 0;
+// .range-slider {
+//     display: flex;
+//     align-items: center;
+//     width: 100%;
+//     position: relative;
+//     justify-content: center;
+//     cursor: pointer;
+//     padding: 30px 0;
+// }
+
+// .range-slider__begin {
+//     height: 16px;
+//     width: 16px;
+//     border-radius: 50%;
+//     background-color: $primary-color;
+//     border: 3px solid $secondary-color;
+//     position: absolute;
+//     left: 0;
+//     top: 50%;
+//     transform: translateY(-50%);
+//     z-index: 99;
+// }
+
+// .range-slider__rail {
+//     display: flex;
+//     align-items: center;
+//     height: 4px;
+//     width: calc(100% - 5px);
+// }
+
+// .range-slider__contain {
+//     position: absolute;
+//     width: calc(100% - 5px);
+//     display: flex;
+//     align-items: center;
+// }
+
+// .range-slider__track {
+//     display: flex;
+//     height: 100%;
+//     background-color: $secondary-color;
+// }
+
+// .range-slider__end {
+//     height: 16px;
+//     width: 16px;
+//     border-radius: 50%;
+//     position: absolute;
+//     left: 100%;
+//     top: 50%;
+//     transform: translateY(-50%);
+//     z-index: 99;
+//     background-color: $primary-color;
+//     border: 3px solid $secondary-color;
+//     &.active::before {
+//         height: 22px;
+//         width: 22px;
+//         position: absolute;
+//         content: '';
+//         display: block;
+//         top: 50%;
+//         left: 50%;
+//         transform: translate(-50%,-50%);
+//         opacity: 0.2;
+//         border-radius: 50%;
+//         background-color: $secondary-color;
+//         z-index: -1;
+//     }
+// }
+
+.slider-wrapper {
+  display: flex;
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 12px;
 }
 
-.range-slider__begin {
-    height: 16px;
-    width: 16px;
-    border-radius: 50%;
-    background-color: $primary-color;
-    border: 3px solid $secondary-color;
+.slider-container {
+  display: flex;
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50px;
+  height: 7px;
+  align-items: center;
+  background-color: $primary-color-text-2;
+}
+
+.slider-track {
     position: absolute;
-    left: 0;
+    background: $secondary-color;
+    height: 7px;
     top: 50%;
     transform: translateY(-50%);
-    z-index: 99;
+    border-radius: 10px;
+
 }
 
-.range-slider__rail {
-    display: flex;
-    align-items: center;
-    height: 4px;
-    width: calc(100% - 5px);
-}
-
-.range-slider__contain {
-    position: absolute;
-    width: calc(100% - 5px);
-    display: flex;
-    align-items: center;
-}
-
-.range-slider__track {
-    display: flex;
-    height: 100%;
+.slider-button {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  right: 0;
+  appearance: none;
+  background: transparent;
+  pointer-events: none;
+  &::-webkit-slider-thumb {
+    pointer-events: auto;
+    appearance: none;
     background-color: $secondary-color;
-}
-
-.range-slider__end {
-    height: 16px;
-    width: 16px;
+    height: 15px;
+    width: 15px;
     border-radius: 50%;
-    position: absolute;
-    left: 100%;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 99;
-    background-color: $primary-color;
-    border: 3px solid $secondary-color;
-    &.active::before {
-        height: 22px;
-        width: 22px;
-        position: absolute;
-        content: '';
-        display: block;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-        opacity: 0.2;
-        border-radius: 50%;
-        background-color: $secondary-color;
-        z-index: -1;
-    }
+    position: relative;
+    cursor: pointer;
+  }
 }
