done page photos

--- a/FrontEnd/client/src/styles/userdropdown.scss
+++ b/FrontEnd/client/src/styles/userdropdown.scss
@@ -83,6 +83,7 @@
   flex-direction: column;
   width: 100%;
   list-style: none;
+  padding-left: 0px !important;
 }
 
 .header-user-drop-down-list-element {
