--- a/FrontEnd/client/src/styles/previewmultipleimage.scss
+++ b/FrontEnd/client/src/styles/previewmultipleimage.scss
@@ -77,5 +77,5 @@
     height: 100%;
     background-position: center !important;
     background-repeat: no-repeat !important;
-    background-size: cover !important;
+    background-size: contain !important;
 }
