--- a/FrontEnd/client/src/styles/_varible.scss
+++ b/FrontEnd/client/src/styles/_varible.scss
@@ -4,9 +4,11 @@
 $primary-color: #ffffff;
 $secondary-color: #ee0033;
 $secondary-color-hover: #be0129;
+$secondary-color-hover2:rgb(185, 99, 117);
 $color-3th: #2372e8;
 $primary-color-text: #020202;
 $primary-color-text-2: #b4b4b4a4;
+$primary-color-text-3: #b4b4b45d;
 $secondary-color-label: #ffffff;
 $color-button-1: #f0f2f5;
 $shadow-button:  1px 1px 10px #5e8ed6;
