--- a/FrontEnd/client/src/components/explore/positive-user.scss
+++ b/FrontEnd/client/src/components/explore/positive-user.scss
@@ -1,4 +1,4 @@
-@import '../../styles/varible';@import '../../styles/varible';
+@import '../../styles/varible';
 
 .positive-user {
     margin-top: 20px;
