--- a/FrontEnd/client/src/components/order-online/inventory-item.scss
+++ b/FrontEnd/client/src/components/order-online/inventory-item.scss
@@ -1,1 +1,72 @@
 @import '../../styles/varible';
+
+.inventory-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 10px;
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+}
+.inventory-item__imagew {
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 150px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img {
+        height: 100%;
+        width: 100%;
+    }
+}
+.inventory-item__promotion {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    font-size: 12px;
+    color: $primary-color;
+    padding: 5px;
+    box-shadow: $shadow-second-card;
+    background-color: $secondary-color-hover;
+    font-weight: bold;
+}
+.inventory-item__description {
+    flex: 1;
+}
+.inventory-item__name {
+    
+}
+.inventory-item__price {
+    font-weight: bold;
+    font-size: 15px
+}
+.inventory-item__description {
+    font: 13px;
+}
+.inventory-item__handle {
+    width: 100%;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.inventory-item__handle-button {
+    height: 100%;
+    padding:  0 10px;
+    text-align: center;
+    line-height: 30px;
+    font-weight: bold;
+    background-color: $secondary-color-hover;
+    color: $primary-color;
+    border-radius: 5px;
+    font-size: 13px;
+    opacity: 0.8;
+    &:hover {
+        background-color: $secondary-color-hover2
+    }
+}
